// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Realizando pruebas del componente GifGrid Debe de mostrar items cuando se carga una imagen desde el hook 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
     
    Samurai x
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Realizando pruebas del componente GifGrid Debe de reenderizar el componente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
     
    Samurai x
  </h3>
  <p>
     Loading 
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
